== 0.1.2

* Had to change version number to make gem build
* Save function can accept options. See rdoc
* Gemspec made safer

== 0.1.1

* Added rdoc comments
* Added saving captured image to specified folder
* Added folders browsing
* Added folders and files listing

== 0.1.0

* Initial import
* Camera configuration (limited to radio-button and float type of items)
* Camera capture image command