@@ -3,18 +3,35 @@ require "gphoto4ruby"
 
 ports = GPhoto2::Camera.ports
 if ports.empty?
+
     # ports array can be empty if there is only one camera plugged in
     # or there are no cameras connected to the computer
     # assuming there is one
     c = GPhoto2::Camera.new()
+
+    # list available configuration items with current values and lists
+    # of allowed values
     c.configs.each do |cfg|
         puts cfg + " value is: " + c[cfg].to_s
         puts "values available are: " + c[cfg, :all].inspect
     end
+
+    # capture image
     c.capture
+    
+    # now camera virtual path is in the folder with images
+    # list image file names
     puts "files on camera: " + c.files.inspect
+    
+    # just an example of camera browsing
     puts "some folder stuff: " + c.folder_up.subfolders.inspect
+    
+    # save preview of captured image in the current directory on hard drive
     c.capture.save :type => :preview, :new_name => "PREVIEW.JPG"
+    
+    # save captured file in the current directory on hard drive and delete
+    # it from camera
+    c.capture.save.delete
 else
     puts ports.length.to_s + "cameras connected"
     cams = []
@@ -25,12 +42,9 @@ else
             puts cfg + " value is: " + c[cfg].to_s
             puts "values available are: " + c[cfg, :all].inspect
         end
-        c.capture
-        puts "files on camera: " + c.files.inspect
-        puts "some folder stuff: " + c.folder_up.subfolders.inspect
         cams.push c
     end
-    # to capture image with all attached cameras at a time use:
+    # to capture image with all attached cameras simultaneously use:
     cams.each_index do |index|
         if index < cams.length - 1
             fork {cams[index].capture; exit!}
