@@ -1,7 +1,11 @@
+== master
+
+* Added "delete file from camera" function
+
 == 0.1.2
 
 * Had to change version number to make gem build
-* Save function can accept options. See rdoc
+* 'Save' function can accept options. See rdoc
 * Gemspec made safer
 
 == 0.1.1
